org.smeup.sys.il.expr/src/org/smeup/sys/il/expr/neutral/NeutralExprParser.java
// $ANTLR 3.5.1 C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g 2015-11-09 18:06:37

  package org.smeup.sys.il.expr.neutral;
  
  import org.smeup.sys.il.expr.IntegratedLanguageExpressionRuntimeException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class NeutralExprParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AE_DIV", "AE_GENERIC", "AE_MINUS", 
		"AE_MOD", "AE_MULT", "AE_PLUS", "AE_POW", "AE_SMINUS", "AE_SPLUS", "AE_TIM", 
		"ALL", "AS_ASS", "AS_DIV", "AS_GENERIC", "AS_MIN", "AS_PLUS", "AS_POW", 
		"AS_TIM", "AT_BOOL", "AT_DATE", "AT_FLOAT", "AT_GENERIC", "AT_HEX", "AT_INDICATOR", 
		"AT_INT", "AT_NAME", "AT_SPECIAL", "AT_STRING", "AXT", "B", "BE", "BIFUN_MARK", 
		"BI_FUN", "BLOCK_OPEN", "C", "CHAR_SPECIAL", "CLOSE_BRACE", "CLOSE_SQUARE", 
		"D", "DIGIT", "DIGIT_SPECIAL", "E", "EscapeSequence", "F", "FT", "FUN_START", 
		"G", "GENERIC", "H", "HexDigit", "I", "INDICATOR", "J", "K", "L", "LETTER", 
		"LE_AND", "LE_GENERIC", "LE_NOT", "LE_OR", "M", "N", "O", "OPEN_BRACE", 
		"OPEN_SQUARE", "P", "Q", "QT", "R", "RE_EQ", "RE_GENERIC", "RE_GT", "RE_GTEQ", 
		"RE_LT", "RE_LTEQ", "RE_NE", "S", "SPECIAL", "SPECIAL_START", "T", "TERM", 
		"U", "UnicodeEscape", "V", "W", "WS", "X", "Y", "Z"
	};
	public static final int EOF=-1;
	public static final int A=4;
	public static final int AE_DIV=5;
	public static final int AE_GENERIC=6;
	public static final int AE_MINUS=7;
	public static final int AE_MOD=8;
	public static final int AE_MULT=9;
	public static final int AE_PLUS=10;
	public static final int AE_POW=11;
	public static final int AE_SMINUS=12;
	public static final int AE_SPLUS=13;
	public static final int AE_TIM=14;
	public static final int ALL=15;
	public static final int AS_ASS=16;
	public static final int AS_DIV=17;
	public static final int AS_GENERIC=18;
	public static final int AS_MIN=19;
	public static final int AS_PLUS=20;
	public static final int AS_POW=21;
	public static final int AS_TIM=22;
	public static final int AT_BOOL=23;
	public static final int AT_DATE=24;
	public static final int AT_FLOAT=25;
	public static final int AT_GENERIC=26;
	public static final int AT_HEX=27;
	public static final int AT_INDICATOR=28;
	public static final int AT_INT=29;
	public static final int AT_NAME=30;
	public static final int AT_SPECIAL=31;
	public static final int AT_STRING=32;
	public static final int AXT=33;
	public static final int B=34;
	public static final int BE=35;
	public static final int BIFUN_MARK=36;
	public static final int BI_FUN=37;
	public static final int BLOCK_OPEN=38;
	public static final int C=39;
	public static final int CHAR_SPECIAL=40;
	public static final int CLOSE_BRACE=41;
	public static final int CLOSE_SQUARE=42;
	public static final int D=43;
	public static final int DIGIT=44;
	public static final int DIGIT_SPECIAL=45;
	public static final int E=46;
	public static final int EscapeSequence=47;
	public static final int F=48;
	public static final int FT=49;
	public static final int FUN_START=50;
	public static final int G=51;
	public static final int GENERIC=52;
	public static final int H=53;
	public static final int HexDigit=54;
	public static final int I=55;
	public static final int INDICATOR=56;
	public static final int J=57;
	public static final int K=58;
	public static final int L=59;
	public static final int LETTER=60;
	public static final int LE_AND=61;
	public static final int LE_GENERIC=62;
	public static final int LE_NOT=63;
	public static final int LE_OR=64;
	public static final int M=65;
	public static final int N=66;
	public static final int O=67;
	public static final int OPEN_BRACE=68;
	public static final int OPEN_SQUARE=69;
	public static final int P=70;
	public static final int Q=71;
	public static final int QT=72;
	public static final int R=73;
	public static final int RE_EQ=74;
	public static final int RE_GENERIC=75;
	public static final int RE_GT=76;
	public static final int RE_GTEQ=77;
	public static final int RE_LT=78;
	public static final int RE_LTEQ=79;
	public static final int RE_NE=80;
	public static final int S=81;
	public static final int SPECIAL=82;
	public static final int SPECIAL_START=83;
	public static final int T=84;
	public static final int TERM=85;
	public static final int U=86;
	public static final int UnicodeEscape=87;
	public static final int V=88;
	public static final int W=89;
	public static final int WS=90;
	public static final int X=91;
	public static final int Y=92;
	public static final int Z=93;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public NeutralExprParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public NeutralExprParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return NeutralExprParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g"; }



	   @Override
	  	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
	    	throw new MismatchedTokenException(ttype, input);
	  	}

		@Override    
	    public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
			String msg = "Parser error. Input: " + e.input.toString();
	        msg += " " + getErrorHeader(e);
	        msg += " Msg: " + getErrorMessage(e, tokenNames);
	        throw new IntegratedLanguageExpressionRuntimeException(msg , e);
	    }	

	   @Override
	  	public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
	    	throw e;
	    }


	public static class expression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:75:1: expression : logicalExpression ( ( AS_ASS | AS_DIV | AS_MIN | AS_PLUS | AS_POW | AS_TIM | AS_GENERIC ) ^ logicalExpression )* EOF !;
	public final NeutralExprParser.expression_return expression() throws RecognitionException {
		NeutralExprParser.expression_return retval = new NeutralExprParser.expression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set2=null;
		Token EOF4=null;
		ParserRuleReturnScope logicalExpression1 =null;
		ParserRuleReturnScope logicalExpression3 =null;

		CommonTree set2_tree=null;
		CommonTree EOF4_tree=null;

		try {
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:76:2: ( logicalExpression ( ( AS_ASS | AS_DIV | AS_MIN | AS_PLUS | AS_POW | AS_TIM | AS_GENERIC ) ^ logicalExpression )* EOF !)
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:76:4: logicalExpression ( ( AS_ASS | AS_DIV | AS_MIN | AS_PLUS | AS_POW | AS_TIM | AS_GENERIC ) ^ logicalExpression )* EOF !
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_logicalExpression_in_expression97);
			logicalExpression1=logicalExpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, logicalExpression1.getTree());

			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:76:22: ( ( AS_ASS | AS_DIV | AS_MIN | AS_PLUS | AS_POW | AS_TIM | AS_GENERIC ) ^ logicalExpression )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= AS_ASS && LA1_0 <= AS_TIM)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:76:23: ( AS_ASS | AS_DIV | AS_MIN | AS_PLUS | AS_POW | AS_TIM | AS_GENERIC ) ^ logicalExpression
					{
					set2=input.LT(1);
					set2=input.LT(1);
					if ( (input.LA(1) >= AS_ASS && input.LA(1) <= AS_TIM) ) {
						input.consume();
						if ( state.backtracking==0 ) root_0 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(set2), root_0);
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_logicalExpression_in_expression117);
					logicalExpression3=logicalExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, logicalExpression3.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_expression121); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class logicalExpression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "logicalExpression"
	// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:79:1: logicalExpression : booleanAndExpression ( LE_OR ^ booleanAndExpression )* ;
	public final NeutralExprParser.logicalExpression_return logicalExpression() throws RecognitionException {
		NeutralExprParser.logicalExpression_return retval = new NeutralExprParser.logicalExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token LE_OR6=null;
		ParserRuleReturnScope booleanAndExpression5 =null;
		ParserRuleReturnScope booleanAndExpression7 =null;

		CommonTree LE_OR6_tree=null;

		try {
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:80:2: ( booleanAndExpression ( LE_OR ^ booleanAndExpression )* )
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:80:4: booleanAndExpression ( LE_OR ^ booleanAndExpression )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_booleanAndExpression_in_logicalExpression133);
			booleanAndExpression5=booleanAndExpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanAndExpression5.getTree());

			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:80:25: ( LE_OR ^ booleanAndExpression )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==LE_OR) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:80:26: LE_OR ^ booleanAndExpression
					{
					LE_OR6=(Token)match(input,LE_OR,FOLLOW_LE_OR_in_logicalExpression136); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					LE_OR6_tree = (CommonTree)adaptor.create(LE_OR6);
					root_0 = (CommonTree)adaptor.becomeRoot(LE_OR6_tree, root_0);
					}

					pushFollow(FOLLOW_booleanAndExpression_in_logicalExpression139);
					booleanAndExpression7=booleanAndExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanAndExpression7.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logicalExpression"


	public static class booleanAndExpression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "booleanAndExpression"
	// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:83:1: booleanAndExpression : booleanGenExpression ( LE_AND ^ booleanGenExpression )* ;
	public final NeutralExprParser.booleanAndExpression_return booleanAndExpression() throws RecognitionException {
		NeutralExprParser.booleanAndExpression_return retval = new NeutralExprParser.booleanAndExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token LE_AND9=null;
		ParserRuleReturnScope booleanGenExpression8 =null;
		ParserRuleReturnScope booleanGenExpression10 =null;

		CommonTree LE_AND9_tree=null;

		try {
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:84:2: ( booleanGenExpression ( LE_AND ^ booleanGenExpression )* )
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:84:4: booleanGenExpression ( LE_AND ^ booleanGenExpression )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_booleanGenExpression_in_booleanAndExpression153);
			booleanGenExpression8=booleanGenExpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanGenExpression8.getTree());

			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:84:25: ( LE_AND ^ booleanGenExpression )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==LE_AND) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:84:26: LE_AND ^ booleanGenExpression
					{
					LE_AND9=(Token)match(input,LE_AND,FOLLOW_LE_AND_in_booleanAndExpression156); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					LE_AND9_tree = (CommonTree)adaptor.create(LE_AND9);
					root_0 = (CommonTree)adaptor.becomeRoot(LE_AND9_tree, root_0);
					}

					pushFollow(FOLLOW_booleanGenExpression_in_booleanAndExpression159);
					booleanGenExpression10=booleanGenExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanGenExpression10.getTree());

					}
					break;

				default :
					break loop3;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "booleanAndExpression"


	public static class booleanGenExpression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "booleanGenExpression"
	// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:87:1: booleanGenExpression : equalityExpression ( LE_GENERIC ^ equalityExpression )* ;
	public final NeutralExprParser.booleanGenExpression_return booleanGenExpression() throws RecognitionException {
		NeutralExprParser.booleanGenExpression_return retval = new NeutralExprParser.booleanGenExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token LE_GENERIC12=null;
		ParserRuleReturnScope equalityExpression11 =null;
		ParserRuleReturnScope equalityExpression13 =null;

		CommonTree LE_GENERIC12_tree=null;

		try {
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:88:2: ( equalityExpression ( LE_GENERIC ^ equalityExpression )* )
			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:89:3: equalityExpression ( LE_GENERIC ^ equalityExpression )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_equalityExpression_in_booleanGenExpression175);
			equalityExpression11=equalityExpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, equalityExpression11.getTree());

			// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:89:22: ( LE_GENERIC ^ equalityExpression )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==LE_GENERIC) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// C:\\Users\\darfores\\git\\asup_0_7_0\\org.smeup.sys.il.expr\\src\\org\\smeup\\sys\\il\\expr\\neutral\\NeutralExpr.g:89:23: LE_GENERIC ^ equalityExpression
					{
					LE_GENERIC12=(Token)match(input,LE_GENERIC,FOLLOW_LE_GENERIC_in_booleanGenExpression178); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					LE_GENERIC12_tree = (CommonTree)adaptor.create(LE_GENERIC12);
					root_0 = (CommonTree)adaptor.becomeRoot(LE_GENERIC12_tree, root_0);
					}

					pushFollow(FOLLOW_equalityExpression_in_booleanGenExpression181);
					equalityExpression13=equalityExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, equalityExpression13.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "booleanGenExpression"

